--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
                 <a class="nav-item nav-link active" routerLink="/tripe">Tripe</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-item nav-link active" routerLink="/gauge">Gauge</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-item nav-link active" routerLink="/command">Command</a>
             </li>
