--- a/src/app/gauge/gauge.component.html
+++ b/src/app/gauge/gauge.component.html
@@ -1,1 +1,4 @@
-<div id="chartdiv" style="width: 100%; height: 500px"></div>
+<h1>OUTSIDE</h1>
+<div id="chartoutsidesdiv" style="width: 100%; height: 500px"></div>
+<h1>INSIDE</h1>
+<div id="chartinsidesdiv" style="width: 100%; height: 500px"></div>
