feat. (CAPTEUR) added

--- a/src/app/gauge/gauge.component.html
+++ b/src/app/gauge/gauge.component.html
@@ -2,3 +2,5 @@
 <div id="chartoutsidesdiv" style="width: 100%; height: 500px"></div>
 <h1>INSIDE</h1>
 <div id="chartinsidesdiv" style="width: 100%; height: 500px"></div>
+<h1>MONL&Eacute;SI</h1>
+<div id="chartmonlesisdiv" style="width: 100%; height: 500px"></div>
